# langchain-nono

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: 01_policy_inline.py  02_policy_from_file.py  03_policy_file_transfer.py  04_proxy_basics.py  05_credential_injection.py  06_policy_proxy.py  07_snapshot_rollback.py  08_proxy_with_snapshots.py  policy_example.json
langchain_nono/: __init__.py  messages.py  sandbox.py
tests/: test_import.py
tests/integration_tests/: test_integration.py
tests/unit_tests/: test_messages.py  test_sandbox.py
